# s4c-gui

./: .gitignore  Makefile.am  README.md  configure.ac  format
src/: main.c  s4c_gui.c  s4c_gui.h
